--- a/test/unittest/hwdevsl/BUILD.gn
+++ b/test/unittest/hwdevsl/BUILD.gn
@@ -1,36 +1,49 @@
+# Copyright (C) 2021 Huawei Device Co., Ltd.
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 import("//build/test.gni")
 module_output_path = "dataclassification/hwdevsl"
 
 config("hwdevsl_private_config") {
-    visibility = [ ":*" ]
-    include_dirs = [
-        "//base/security/dataclassification/test/unittest/hwdevsl",
-        "//base/security/dataclassification/interfaces/innerkits/hwdevsl/include/1.0",
-        "//third_party/googletest/googletest/include",
-        "utils/native/base/include",
-    ]
+  visibility = [ ":*" ]
+  include_dirs = [
+    "//base/security/dataclassification/test/unittest/hwdevsl",
+    "//base/security/dataclassification/interfaces/innerkits/hwdevsl/include/1.0",
+    "//third_party/googletest/googletest/include",
+    "utils/native/base/include",
+  ]
 
-    cflags = [ "-DHILOG_ENABLE" ]
+  cflags = [ "-DHILOG_ENABLE" ]
 }
 
 ohos_unittest("HwDslTest") {
-    part_name = "dataclassification"
-    subsystem_name = "security"
-    module_out_path = module_output_path
+  part_name = "dataclassification"
+  subsystem_name = "security"
+  module_out_path = module_output_path
 
-    sources = [ "hwdevsl_test.cpp" ]
+  sources = [ "hwdevsl_test.cpp" ]
 
-    configs = [ ":hwdevsl_private_config"]
+  configs = [ ":hwdevsl_private_config" ]
 
-    deps = [
-        "//base/security/dataclassification/interfaces/innerkits/hwdevsl:hwdsl",
-        "//utils/native/base:utils"
-    ]
+  deps = [
+    "//base/security/dataclassification/interfaces/innerkits/hwdevsl:hwdsl",
+    "//utils/native/base:utils",
+  ]
 
-    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
 }
 
 group("hwdevsl_test") {
-    testonly = true
-    deps = [ ":HwDslTest" ]
+  testonly = true
+  deps = [ ":HwDslTest" ]
 }
