OH3_1数据传输管控代码提交
Signed-off-by: wangyongzhong2 <wangyongzhong2@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -14,7 +14,6 @@
 import("//build/ohos.gni")
 group("dataclassification_build_module") {
   deps = [
-    "//base/security/dataclassification/interfaces/innerkits/fbe_iudf_xattr:fbe_iudf_xattr",
-    "//base/security/dataclassification/interfaces/innerkits/hwdevsl:hwdsl",
+    "//base/security/dataclassification/interfaces/innerkits/datasecuritylevel:datasecuritylevel",
   ]
 }
