OH1_1数据传输管控代码提交
Signed-off-by: wangyongzhong2 <wangyongzhong2@huawei.com>

--- a/test/unittest/datasecuritylevel/BUILD.gn
+++ b/test/unittest/datasecuritylevel/BUILD.gn
@@ -30,9 +30,7 @@ ohos_unittest("DevSLMgrTest") {
   subsystem_name = "security"
   module_out_path = module_output_path
 
-  sources = [ "datasecuritylevel_test.cpp" ]
-
-  configs = [ ":datasecuritylevel_test_config" ]
+  sources = [ "DevSLMgrTest.cpp" ]
 
   deps = [ 
     "//base/security/dataclassification/interfaces/innerkits/datasecuritylevel:datasecuritylevel",
@@ -43,9 +41,4 @@ ohos_unittest("DevSLMgrTest") {
     "dsoftbus_standard:softbus_client",
     "device_security_level:dslm_sdk",
   ]
-}
-
-group("datasecuritylevel_test") {
-  testonly = true
-  deps = [ ":DevSLMgrTest" ]
 }
