--- a/test/unittest/datatransmitmgr/BUILD.gn
+++ b/test/unittest/datatransmitmgr/BUILD.gn
@@ -14,11 +14,11 @@
 import("//build/test.gni")
 module_output_path = "dataclassification/datasecuritylevel"
 
-config("datasecuritylevel_test_config") {
+config("datatransmitmgr_test_config") {
   visibility = [ ":*" ]
   include_dirs = [
-    "//base/security/dataclassification/test/unittest/datasecuritylevel",
-    "//base/security/dataclassification/interfaces/innerkits/datasecuritylevel/include",
+    "//base/security/dataclassification/test/unittest/datatransmitmgr",
+    "//base/security/dataclassification/interfaces/innerkits/datatransmitmgr/include",
     "//third_party/googletest/googletest/include",
     "//utils/native/base/include",
   ]
@@ -33,7 +33,7 @@ ohos_unittest("DevSLMgrTest") {
   sources = [ "DevSLMgrTest.cpp" ]
 
   deps = [ 
-    "//base/security/dataclassification/interfaces/innerkits/datasecuritylevel:datasecuritylevel",
+    "//base/security/dataclassification/interfaces/innerkits/datatransmitmgr:data_transit_mgr",
     "//utils/native/base:utils",
   ]
   external_deps = [
