--- a/interfaces/innerkits/datatransmitmgr/BUILD.gn
+++ b/interfaces/innerkits/datatransmitmgr/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -26,24 +26,20 @@ ohos_shared_library("data_transit_mgr") {
 
   public_configs = [ ":datatransmitmgr_config" ]
 
-  include_dirs = [
-    "include",
-  ]
+  include_dirs = [ "include" ]
 
   sources = [
-    "//base/security/dataclassification/frameworks/datatransmitmgr/dev_slinfo_mgr.c",
-    "//base/security/dataclassification/frameworks/datatransmitmgr/dev_slinfo_list.c",
     "//base/security/dataclassification/frameworks/datatransmitmgr/dev_slinfo_adpt.c",
+    "//base/security/dataclassification/frameworks/datatransmitmgr/dev_slinfo_list.c",
+    "//base/security/dataclassification/frameworks/datatransmitmgr/dev_slinfo_mgr.c",
   ]
 
-  deps = [ 
-    "//utils/native/base:utils",
-  ]
+  deps = [ "//utils/native/base:utils" ]
 
   external_deps = [
-    "hiviewdfx_hilog_native:libhilog",
     "device_security_level:dslm_sdk",
+    "hiviewdfx_hilog_native:libhilog",
   ]
-  
+
   cflags = [ "-Wall" ]
 }
