--- a/test/unittest/datatransmitmgr/BUILD.gn
+++ b/test/unittest/datatransmitmgr/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (C) 2021 Huawei Device Co., Ltd.
+# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -32,13 +32,13 @@ ohos_unittest("DevSLMgrTest") {
 
   sources = [ "DevSLMgrTest.cpp" ]
 
-  deps = [ 
+  deps = [
     "//base/security/dataclassification/interfaces/innerkits/datatransmitmgr:data_transit_mgr",
     "//utils/native/base:utils",
   ]
   external_deps = [
-    "hiviewdfx_hilog_native:libhilog",
-    "dsoftbus_standard:softbus_client",
     "device_security_level:dslm_sdk",
+    "dsoftbus_standard:softbus_client",
+    "hiviewdfx_hilog_native:libhilog",
   ]
 }
