Fix:Modify softbus component name. Feature or Bugfix:Feature Binary Source: No
Signed-off-by: libaoping <libaoping1@huawei.com>

--- a/test/unittest/datatransmitmgr/BUILD.gn
+++ b/test/unittest/datatransmitmgr/BUILD.gn
@@ -38,7 +38,7 @@ ohos_unittest("DevSLMgrTest") {
   ]
   external_deps = [
     "device_security_level:dslm_sdk",
-    "dsoftbus_standard:softbus_client",
+    "dsoftbus:softbus_client",
     "hiviewdfx_hilog_native:libhilog",
   ]
 }
