--- a/test/fuzztest/datatransmitmgr/datatransmitmgr_fuzzer/BUILD.gn
+++ b/test/fuzztest/datatransmitmgr/datatransmitmgr_fuzzer/BUILD.gn
@@ -44,4 +44,6 @@ ohos_fuzztest("DataTransmitMgrFuzzTest") {
     "dsoftbus:softbus_client",
     "hiviewdfx_hilog_native:libhilog",
   ]
+  cflags_cc = [ "--coverage" ]
+  ldflags = [ "--coverage" ]
 }
