--- a/interfaces/innerkits/datatransmitmgr/BUILD.gn
+++ b/interfaces/innerkits/datatransmitmgr/BUILD.gn
@@ -40,9 +40,5 @@ ohos_shared_library("data_transit_mgr") {
     "hiviewdfx_hilog_native:libhilog",
   ]
 
-  cflags = [
-    "-Wall",
-    "--coverage",
-  ]
-  ldflags = [ "--coverage" ]
+  cflags = [ "-Wall" ]
 }
