--- a/test/unittest/datatransmitmgr/BUILD.gn
+++ b/test/unittest/datatransmitmgr/BUILD.gn
@@ -16,13 +16,7 @@ module_output_path = "dataclassification/datasecuritylevel"
 
 config("datatransmitmgr_test_config") {
   visibility = [ ":*" ]
-  include_dirs = [
-    "//base/security/dataclassification/test/unittest/datatransmitmgr",
-    "//base/security/dataclassification/interfaces/innerkits/datatransmitmgr/include",
-    "//base/startup/init/interfaces/innerkits/include/syspara",
-    "//third_party/googletest/googletest/include",
-    "//commonlibrary/c_utils/base/include",
-  ]
+  include_dirs = [ "//third_party/googletest/googletest/include" ]
   cflags = [ "-DHILOG_ENABLE" ]
 }
 
@@ -31,15 +25,18 @@ ohos_unittest("DevSLMgrTest") {
   subsystem_name = "security"
   module_out_path = module_output_path
 
-  sources = [ "DevSLMgrTest.cpp" ]
-
-  deps = [
-    "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
-    "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
-    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
-    "//base/security/dataclassification/interfaces/innerkits/datatransmitmgr:data_transit_mgr",
+  include_dirs = [ "../../../interfaces/innerkits/datatransmitmgr/include" ]
+  sources = [
+    "../../../frameworks/datatransmitmgr/dev_slinfo_adpt.c",
+    "../../../frameworks/datatransmitmgr/dev_slinfo_list.c",
+    "../../../frameworks/datatransmitmgr/dev_slinfo_mgr.c",
+    "DevSLMgrTest.cpp",
   ]
+
   external_deps = [
+    "access_token:libaccesstoken_sdk",
+    "access_token:libnativetoken",
+    "access_token:libtoken_setproc",
     "c_utils:utils",
     "device_security_level:dslm_sdk",
     "dsoftbus:softbus_client",
