--- a/interfaces/innerkits/datatransmitmgr/BUILD.gn
+++ b/interfaces/innerkits/datatransmitmgr/BUILD.gn
@@ -34,6 +34,18 @@ ohos_shared_library("data_transit_mgr") {
     "../../../frameworks/datatransmitmgr/dev_slinfo_mgr.c",
   ]
 
+  if (os_level == "standard") {
+    sanitize = {
+      cfi = true
+      cfi_cross_dso = true
+      debug = false
+      integer_overflow = true
+      ubsan = true
+      boundary_sanitize = true
+      stack_protector_ret = true
+    }
+  }
+
   external_deps = [
     "c_utils:utils",
     "device_security_level:dslm_sdk",
