--- a/test/unittest/datatransmitmgr/BUILD.gn
+++ b/test/unittest/datatransmitmgr/BUILD.gn
@@ -33,6 +33,18 @@ ohos_unittest("DevSLMgrTest") {
 
   sources = [ "DevSLMgrTest.cpp" ]
 
+  if (os_level == "standard") {
+    sanitize = {
+      cfi = true
+      cfi_cross_dso = true
+      debug = false
+      integer_overflow = true
+      ubsan = true
+      boundary_sanitize = true
+      stack_protector_ret = true
+    }
+  }
+
   deps = [
     "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
     "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
