--- a/interfaces/innerkits/datatransmitmgr/BUILD.gn
+++ b/interfaces/innerkits/datatransmitmgr/BUILD.gn
@@ -31,6 +31,7 @@ ohos_shared_library("data_transit_mgr") {
   sources = [
     "../../../frameworks/datatransmitmgr/dev_slinfo_adpt.c",
     "../../../frameworks/datatransmitmgr/dev_slinfo_list.c",
+    "../../../frameworks/datatransmitmgr/dev_slinfo_log.c",
     "../../../frameworks/datatransmitmgr/dev_slinfo_mgr.c",
   ]
 
@@ -52,5 +53,10 @@ ohos_shared_library("data_transit_mgr") {
     "hilog:libhilog",
   ]
 
-  cflags = [ "-Wall" ]
+  defines = [ "HILOG_ENABLE" ]
+
+  cflags = [
+    "-DHILOG_ENABLE",
+    "-Wall",
+  ]
 }
