tdd test refine
Signed-off-by: wangyongzhong2 <wangyongzhong2@huawei.com>

--- a/test/unittest/datatransmitmgr/BUILD.gn
+++ b/test/unittest/datatransmitmgr/BUILD.gn
@@ -57,7 +57,7 @@ ohos_unittest("DevSLMgrTest") {
   external_deps = [
     "c_utils:utils",
     "device_security_level:dslm_sdk",
-    "dsoftbus:softbus_client",
     "hilog:libhilog",
+    "init:libbegetutil",
   ]
 }
