--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (C) 2021-2024 Huawei Device Co., Ltd.
+# Copyright (C) 2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -12,8 +12,17 @@
 # limitations under the License.
 
 import("//build/ohos.gni")
-group("dataclassification_build_module") {
+
+group("dataclassification_test_build") {
+  deps = []
   if (os_level == "standard") {
-    deps = [ "interfaces/innerkits/datatransmitmgr:data_transit_mgr" ]
+    testonly = true
+    deps += [
+      "fuzztest/datatransmitmgr/datatransmitmgr_fuzzer:DataTransmitMgrFuzzTest",
+      "fuzztest/datatransmitmgr/devslinfoadpt_fuzzer:DevSlinfoAdptFuzzTest",
+      "fuzztest/datatransmitmgr/gethighestseclevel_fuzzer:GetHighestSecLevelFuzzTest",
+      "fuzztest/datatransmitmgr/gethighestseclevelasync_fuzzer:GetHighestSecLevelAsyncFuzzTest",
+      "unittest/datatransmitmgr:DevSLMgrTest",
+    ]
   }
 }
