--- a/test/fuzztest/datatransmitmgr/devslinfoadpt_fuzzer/BUILD.gn
+++ b/test/fuzztest/datatransmitmgr/devslinfoadpt_fuzzer/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (C) 2022 Huawei Device Co., Ltd.
+# Copyright (C) 2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -14,7 +14,7 @@
 import("//build/ohos.gni")
 import("//build/test.gni")
 
-ohos_fuzztest("DataTransmitMgrFuzzTest") {
+ohos_fuzztest("DevSlinfoAdptFuzzTest") {
   module_out_path = "security/dataclassification"
   fuzz_config_file = "."
 
@@ -30,12 +30,19 @@ ohos_fuzztest("DataTransmitMgrFuzzTest") {
     "../../../../interfaces/innerkits/datatransmitmgr/include",
   ]
 
-  sources = [ "datatransmitmgr_fuzzer.cpp" ]
+  sources = [ "devslinfoadpt_fuzzer.cpp" ]
 
   deps = [ "../../../../interfaces/innerkits/datatransmitmgr:data_transit_mgr" ]
 
+  defines = [ "HILOG_ENABLE" ]
+
   external_deps = [
+    "access_token:libaccesstoken_sdk",
+    "access_token:libnativetoken",
+    "access_token:libtoken_setproc",
     "c_utils:utils",
+    "device_security_level:dslm_sdk",
     "hilog:libhilog",
+    "init:libbegetutil",
   ]
 }
