--- a/test/unittest/datatransmitmgr/BUILD.gn
+++ b/test/unittest/datatransmitmgr/BUILD.gn
@@ -46,15 +46,15 @@ ohos_unittest("DevSLMgrTest") {
   }
 
   deps = [
-    "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
-    "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
-    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
     "//base/security/dataclassification/interfaces/innerkits/datatransmitmgr:data_transit_mgr",
   ]
 
   defines = [ "HILOG_ENABLE" ]
 
   external_deps = [
+    "access_token:libaccesstoken_sdk",
+    "access_token:libnativetoken",
+    "access_token:libtoken_setproc",
     "c_utils:utils",
     "device_security_level:dslm_sdk",
     "hilog:libhilog",
