--- a/test/unittest/datatransmitmgr/BUILD.gn
+++ b/test/unittest/datatransmitmgr/BUILD.gn
@@ -45,9 +45,7 @@ ohos_unittest("DevSLMgrTest") {
     }
   }
 
-  deps = [
-    "//base/security/dataclassification/interfaces/innerkits/datatransmitmgr:data_transit_mgr",
-  ]
+  deps = [ "//base/security/dataclassification/interfaces/innerkits/datatransmitmgr:data_transit_mgr" ]
 
   defines = [ "HILOG_ENABLE" ]
 
