--- a/test/unittest/datatransmitmgr/BUILD.gn
+++ b/test/unittest/datatransmitmgr/BUILD.gn
@@ -16,12 +16,7 @@ module_output_path = "dataclassification/datasecuritylevel"
 
 config("datatransmitmgr_test_config") {
   visibility = [ ":*" ]
-  include_dirs = [
-    "//base/security/dataclassification/test/unittest/datatransmitmgr",
-    "../../../interfaces/inner_api/datatransmitmgr/include",
-    "//third_party/googletest/googletest/include",
-    "//commonlibrary/c_utils/base/include",
-  ]
+  include_dirs = [ "../../../interfaces/inner_api/datatransmitmgr/include" ]
   cflags = [ "-DHILOG_ENABLE" ]
 }
 
