--- a/interfaces/inner_api/datatransmitmgr/BUILD.gn
+++ b/interfaces/inner_api/datatransmitmgr/BUILD.gn
@@ -43,6 +43,7 @@ ohos_shared_library("data_transit_mgr") {
   ]
 
   if (os_level == "standard") {
+    branch_protector_ret = "pac_ret"
     sanitize = {
       cfi = true
       cfi_cross_dso = true
@@ -50,7 +51,6 @@ ohos_shared_library("data_transit_mgr") {
       integer_overflow = true
       ubsan = true
       boundary_sanitize = true
-      stack_protector_ret = true
     }
   }
   if (dataclassification_feature_enabled) {
