add build options
Signed-off-by: 王永忠 <wangyongzhong2@huawei.com>

--- a/interfaces/inner_api/datatransmitmgr/BUILD.gn
+++ b/interfaces/inner_api/datatransmitmgr/BUILD.gn
@@ -64,7 +64,9 @@ ohos_shared_library("data_transit_mgr") {
   defines = [ "HILOG_ENABLE" ]
 
   cflags = [
+    "-D_FORTIFY_SOURCE=2",
     "-DHILOG_ENABLE",
     "-Wall",
+    "-fstack-protector-strong",
   ]
 }
